Deployment/HoneyPal/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: honeypal
  namespace: honeypal
  labels:
    app: honeypal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: honeypal
  template:
    metadata:
      labels:
        app: honeypal
        version: v1
    spec:
      containers:
        - name: honeypal
          image: sebastart/honeypal:latest
          ports:
          - containerPort: 80
      imagePullSecrets:
        - name: docker-container-registry
