Deployment/HoneyPal/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: honeypal
  namespace: honeypal
spec:
  selector:
    app: honeypal
  ports:
  - name: http
    port: 80
    targetPort: 80
