Deployment/HoneyPal/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: honeypal
  namespace: honeypal
spec:
  host: honeypal
  subsets:
  - name: v1
    labels:
      version: v1
  trafficPolicy:
    tls:
      mode: DISABLE
