Deployment/HoneyPal/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: honeypal-vs
  namespace: honeypal
spec:
  hosts:
  - "honeypal.wondering-developer.de"
  gateways:
  - default/ingress-gateway
  http:
  - route:
    - destination:
        host: honeypal
        subset: v1
        port:
          number: 80
